# gnuplot-qq

./: .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  gnuplot-qq.cabal  shell.nix
src/Graphics/Gnuplot/: QQ.hs  Test.hs
